package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "theo",
    entry_point = "theo/bin/theo",
    node_modules = "//:node_modules",
)

nodejs_binary(
    name = "reload",
    entry_point = "reload/bin/reload",
    node_modules = "//:node_modules",
)
