load(
    "//tools/design-tokens:defs.bzl",
    "tokens_transform",
    "sass_tokens",
    "html_tokens",
    "html_tokens_server",
)

sass_tokens(
    name = "sass",
    srcs = glob(["*.yml"]),
    entry_point = "buttons.yml",
)

html_tokens(
    name = "html",
    srcs = glob(["*.yml"]),
    entry_point = "buttons.yml",
)

html_tokens_server(
    name = "dev_server",
    index = ":html",
    tags = ["ibazel_notify_changes"],
)
